--- a/RunningWater/App.xaml
+++ b/RunningWater/App.xaml
@@ -3,6 +3,13 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="RunningWater.App">
     <Application.Resources>
-
+        <Color x:Key="accent">#29ab87</Color>
+        <Color x:Key="main">#29ab87</Color>
+        <Color x:Key="primary">#263238</Color>
+        <Color x:Key="secondary">#b0bec5</Color>
+        <Color x:Key="line">#11000000</Color>
+        <Color x:Key="black">#263238</Color>
+        <Color x:Key="white">#ffffff</Color>
+        <Color x:Key="destructive">#e53935</Color>
     </Application.Resources>
 </Application>
