--- a/RunningWater/Pages/StartPage.xaml
+++ b/RunningWater/Pages/StartPage.xaml
@@ -1,23 +1,25 @@
 ﻿<?xml version="1.0" encoding="UTF-8" ?>
 <pages:BasePage
     xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:xct="http://xamarin.com/schemas/2020/toolkit"
     xmlns:t="clr-namespace:RunningWater.Helpers"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:pages="clr-namespace:RunningWater.Pages"
+    xmlns:forms="clr-namespace:FFImageLoading.Forms;assembly=FFImageLoading.Forms"
     x:Class="RunningWater.Pages.StartPage">
 
     <StackLayout
         Padding="32"
         HorizontalOptions="Center"
         VerticalOptions="Center"
-        Spacing="12">
+        Spacing="14">
 
-        <ActivityIndicator
-            WidthRequest="24"
-            HeightRequest="24"
-            IsRunning="True"
-            IsEnabled="True"
-            Color="{DynamicResource secondary}" />
+        <forms:CachedImage
+            Source="resource://RunningWater.Resources.Icon180.png"
+            WidthRequest="70"
+            HeightRequest="70"
+            HorizontalOptions="Center"
+            xct:CornerRadiusEffect.CornerRadius="35" />
 
         <Label
             HorizontalOptions="Center"
@@ -25,6 +27,13 @@
             TextColor="{DynamicResource primary}"
             FontFamily="NunitoRegular"
             Text="{t:Translate 'StartPage.Body.Text'}" />
+
+        <ActivityIndicator
+            WidthRequest="24"
+            HeightRequest="24"
+            IsRunning="True"
+            IsEnabled="True"
+            Color="{DynamicResource secondary}" />
 
     </StackLayout>
 
